2004-11-01  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/java/util/Calendar.java:
	Resynced with GNU Classpath.

	2004-10-31  Noa Resare  <noa@resare.com>

        * java/util/Calendar.java (explicitDSTOffset): New instance field.
        (set(int,int)): Set and use new field.
        (set(int,int,int)): Check new field.

2004-10-31  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/Klasses.jar.bootstrap:
	Regenerated.

	* libraries/javalib/bootstrap.classlist:
	Added missing files for kjc build with pthreads.

	Reported by: Riccardo Mottola <rmottola@users.sf.net>

2004-10-31  Helmer Kraemer  <hkraemer@freenet.de>

	Moved complete handling of thread interruption down to jthread layer:
	
	* kaffe/kaffevm/systems/unix-jthreads/jthread.h
	(THREAD_FLAGS_INTERRUPTED_READ) removed
	* kaffe/kaffevm/systems/unix-jthreads/jthread.c
	(suspendOnQThread): don't clear interrupted flag
	(jthread_interrupt): set interrupted flag if a thread interrupts
	itself; only resume threads not waiting for a mutex

	* kaffe/kaffevm/systems/unix-pthreads/lock-impl.c
	(jcondvar_wait): don't mess around with interrupted flag, it's
	set correctly by the interrupting thread
	* kaffe/kaffevm/systems/unix-pthreads/thread-impl.c
	(jthread_interrupt): if thread is waiting for its semaphore, signal that
	one instead of sending a signal
	(jthread_is_interrupted, jthread_interrupted): add comments
	(jthread_suspendall): lock thread's suspendLock before reading its
	suspendState

	* include/errors.h: added define for java.lang.InterruptedException
	
	* libraries/clib/native/Object.c, libraries/javalib/java/lang/VMObject.java
	(nativeWait): removed
	(wait): moved to native code

	* libraries/clib/native/Thread.c, libraries/javalib/java/lang/VMThread.java
	(nativeInterrupt, nativeIsInterrupted, nativeInterrupted): removed
	(interrupt, isInterrupted, interrupted, sleep): moved to native code

	Some other minor fixes:

	* libraries/javalib/kaffe/lang/ThreadStack.java