@@ -1,5 +1,16 @@
 2004-11-01  Dalibor Topic  <robilad@kaffe.org>
 
+	* libraries/javalib/java/beans/PropertyEditorSupport.java:
+        Resynced with GNU Classpath.
+
+	2004-10-31  Robert Schuster <thebohemian@gmx.net>
+
+        Fixes bug #10799
+        * java/beans/PropertyEditorSupport.java
+        (setValue): Fire property change event
+
+2004-11-01  Dalibor Topic  <robilad@kaffe.org>
+
 	* libraries/javalib/java/util/Calendar.java:
 	Resynced with GNU Classpath.
 
